2007-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-clear-contents): "&#012" -> "&#012;".

	* sb-kantei.el (shimbun-kantei-groups): Add m-magazine-en.abe,
	m-magazine-ja.abe, m-magazine-en.koizumi groups.
	(shimbun-index-url, shimbun-from-address, shimbun-get-headers):
	Likewise.
	(shimbun-kantei-content-start, shimbun-kantei-content-end): Abolish.
	(shimbun-kantei-x-face-alist): Change the default face into Abe's; make
	the default face empty temporarily.
	(shimbun-clear-contents): Rewrite.
	(shimbun-make-contents): New method function that choose face according
	to author.

	* shimbun.el (shimbun-end-of-tag): Enable it to search for the end of
	current tag as well.

2007-09-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-shimbun.el (mew-shimbun-goto-folder): Use mapc instead of mapcar.

2007-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-clear-contents): Remove useless timesselect
	stuff.

2007-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-end-of-tag): Rewrite.

	* sb-tdiary.el (shimbun-make-contents): Use mapc instead of mapcar.

2007-09-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun.el (shimbun-decode-entities-string): Define as an alias
	instead of a function using `shimbun-decode-entities'.

	* sb-atom-hash.el (shimbun-hash-update-items-impl): Use
	`shimbun-decode-entities-string' instead of `shimbun-decode-entities'.

	* sb-mailman.el (shimbun-mailman-headers): Call `shimbun-remove-markup'
	before calling `shimbun-decode-entities', in order to keep encoded
	markups.

2007-09-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-article): Remove workaround.

2007-09-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-atmarkit.el (shimbun-get-headers): New method to process
	redirections of URLs given by RSS feeds.

2007-09-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-nytimes-content-start)
	(shimbun-nytimes-content-end): Abolish.